--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Horusec
-        uses: fike/horusec-action@8659ee7bdb5ca0c82a2eff563523947398c46d63
+        uses: fike/horusec-action@main
         with:
           arguments: --output-format="sarif" -O="results.sarif"
       
