--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
           cd horusec
           git reset --hard 8659ee7bdb5ca0c82a2eff563523947398c46d63
           make build-dev
-          ./horusec start -p="${{ GITHUB_WORKSPACE }}" -O="${{ GITHUB_WORKSPACE }}/report.sarif" --output-format="sarif"
+          ./horusec start -p="${{ env.GITHUB_WORKSPACE }}" -O="${{ env.GITHUB_WORKSPACE }}/report.sarif" --output-format="sarif"
       
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: ${{ GITHUB_WORKSPACE }}/results.sarif
+          sarif_file: ${{ env.GITHUB_WORKSPACE }}/results.sarif
