--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v2.2.0
         with:
-          go-version: '1.17.0-rc2'
+          go-version: '1.16.1'
           check-latest: true
       
       - name: Grab and build Horusec
