--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           
       - name: Run Horusec
         run: |
-          ./horusec start -p="$GITHUB_WORKSPACE" -O="$GITHUB_WORKSPACE/report.sarif" --output-format="sarif"
+          ./horusec/horusec start -p="$GITHUB_WORKSPACE" -O="$GITHUB_WORKSPACE/report.sarif" --output-format="sarif"
       
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
