--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: ${{ env.GITHUB_WORKSPACE }}/results.sarif
+          sarif_file: ${{ env.GITHUB_WORKSPACE }}/report.sarif
